# grachi

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE.txt  README.md  build_n_run.bat
Grachi/: CMakeLists.txt  Common.hpp  CommonNon.cpp  CommonNon.hpp  Grachi.cpp  Grachi.h  Menu.cpp  Menu.hpp  Settings.cpp  Settings.hpp
assets/data/: README.txt
assets/data/locale/: README.txt  main_menu.atrc  tips.atrc
assets/data/locations/: airbases.atrc
assets/data/maps/: README.txt  afghanistan.atrc  template.atrc
assets/data/missions/: template  tutorial.atrc
assets/data/planes/: su25.atrc
assets/data/text/voice_warning_voicelines/: ri_65.atrc  vws.atrc
assets/data/text/voice_warning_voicelines/templates/: voice_warning_voicelines.atrc
assets/data/vehicles/: README.txt
assets/data/vehicles/planes/: su25.atrc
assets/data/vehicles/planes/armament/: ptb_800.atrc
assets/data/vehicles/templates/: airplane.atrc  airplane_armament.atrc
config/: grachi.conf
html/: index.html
libs/ATRC_2.2.0/: README.md
libs/ATRC_2.2.0/Windows/Win32/Debug/: ATRC.exp
libs/ATRC_2.2.0/Windows/Win32/Release/: ATRC.exp  ATRC.lib
libs/ATRC_2.2.0/Windows/x64/Debug/: ATRC.exp
libs/ATRC_2.2.0/Windows/x64/Release/: ATRC.exp  ATRC.lib
libs/ATRC_2.2.0/docs/: ATRC_C-CPP.chm
libs/ATRC_2.2.0/include/: ATRC.h
libs/Arghand-1.2.0/: LICENSE.txt  README.md
libs/Arghand-1.2.0/Include/: Arghand.h
release_building/: installer.nsi  win.bat
scripts/: build-and-run.bat  build-exe.bat  build-fs-run.bat  build-fs.bat  build.bat  package.bat  run-package.bat  run.bat
source/: atrc_fd.cpp  atrc_fd.hpp  atrc_handle.h  grachi.cpp  grachi.hpp  hardware.hpp  image_process.cpp  main.c  main.cpp  main.h  main_menu.cpp  msg.cpp  msg.hpp  resources.cpp  resources.h  states.hpp  styling.cpp  styling.hpp
source/screens/: game.cpp  game_class.hpp  main_menu.cpp  main_menu_class.hpp  screens.hpp
source/screens/components/: button.cpp  button.hpp  text.cpp  text.hpp  text_rotating_overflow.cpp  text_wrap_overflow.cpp  universal.cpp  universal.hpp
source/test/: CMakeLists.txt  build.bat  test.cpp
source/vehicles/: airplane.cpp  airplane.hpp  ground_vehicle.hpp
src/: main.lua  main_game.lua  main_menu.lua
z-linux/: build.sh
z-win/: build.bat  run.bat
z-win/scripts/: globals.bat
